--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV=development next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -60,6 +60,8 @@
     "next-themes": "^0.3.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "postcss": "8.4.30",
     "process": "^0.11.10",
     "react": "18.2.0",
