--- a/package.json
+++ b/package.json
@@ -53,13 +53,16 @@
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "formdata-node": "^6.0.3",
     "https-browserify": "^1.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
+    "multiformats": "^13.3.2",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "pinata": "^2.2.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "postcss": "8.4.30",
